--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,7 @@
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="{{ site.baseurl }}/">Home</a></li>
-                    <li class="active visible-xs-block"><a href="{{ site.baseurl }}/links.html">Links</a></li>
+                    <li class="active visible-xs-block"><a href="{{ site.baseurl }}/links.html">Documentation</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/archive.html">Archive</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/downloads/">Downloads</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/feed.xml">RSS</a></li>
