--- a/_includes/links-list.html
+++ b/_includes/links-list.html
@@ -4,5 +4,5 @@
   <li><a href="{{ site.baseurl }}/faq.html">FAQ</a></li>
   <li><a href="{{ site.baseurl }}/config.html">Config</a></li>
   <li><a href="{{ site.baseurl }}/usage.html">Usage</a></li>
-  <li><a href="{{ site.baseurl }}/changes.html">Changes</a></li>
+  <li><a href="{{ site.baseurl }}/changelog.html">Changelog</a></li>
 </ul>
