--- a/_includes/links-list.html
+++ b/_includes/links-list.html
@@ -2,7 +2,8 @@
 <ul>
   <li><a href="{{ site.baseurl }}/overview.html">Overview</a></li>
   <li><a href="{{ site.baseurl }}/faq.html">FAQ</a></li>
-  <li><a href="{{ site.baseurl }}/config.html">Config</a></li>
+  <li><a href="{{ site.baseurl }}/config.html">Configuration</a></li>
   <li><a href="{{ site.baseurl }}/usage.html">Usage</a></li>
+  <li><a href="{{ site.baseurl }}/install.html">Install</a></li>
   <li><a href="{{ site.baseurl }}/changelog.html">Changelog</a></li>
 </ul>
