rename support -> community

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
                     <li class="active visible-xs-block"><a href="{{ site.baseurl }}/links.html">Documentation</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/archive.html">Archive</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/downloads/">Downloads</a></li>
-                    <li class="active"><a href="{{ site.baseurl }}/support.html">Support</a></li>
+                    <li class="active"><a href="{{ site.baseurl }}/community.html">Community</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/feed.xml">RSS</a></li>
                     {% if site.github != '' %}
                       <li class="active"><a href="https://github.com/{{ site.github }}">Github</a></li>
