Move RSS to header.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,7 @@
     <script src="{{ site.baseurl }}/js/main.js"></script>
     <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ site.baseurl }}/css/theme.css" rel="stylesheet">
+    <link rel="alternate" type="application/rss+xml" title="News feed" href="{{ site.baseurl }}/feed.xml">
 </head>
 
 <body>
@@ -34,7 +35,6 @@
                     <li class="active"><a href="{{ site.baseurl }}/archive.html">Archive</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/downloads/">Downloads</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/community.html">Community</a></li>
-                    <li class="active"><a href="{{ site.baseurl }}/feed.xml">RSS</a></li>
                     {% if site.github != '' %}
                       <li class="active"><a href="https://github.com/{{ site.github }}">Github</a></li>
                     {% endif %}
