move github link, move overview->features

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,11 +32,11 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="{{ site.baseurl }}/">Home</a></li>
                     <li class="active visible-xs-block"><a href="{{ site.baseurl }}/links.html">Documentation</a></li>
-                    <li class="active"><a href="{{ site.baseurl }}/archive.html">Archive</a></li>
+                    <li class="active"><a href="{{ site.baseurl }}/features.html">Features</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/downloads/">Downloads</a></li>
                     <li class="active"><a href="{{ site.baseurl }}/community.html">Community</a></li>
+                    <li class="active"><a href="{{ site.baseurl }}/archive.html">Archive</a></li>
                     {% if site.github != '' %}
-                      <li class="active"><a href="https://github.com/{{ site.github }}">Github</a></li>
                     {% endif %}
                 </ul>
               </div>
