--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
     <script src="{{ site.baseurl }}/js/main.js"></script>
     <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ site.baseurl }}/css/theme.css" rel="stylesheet">
-    <link rel="alternate" type="application/rss+xml" title="News feed" href="{{ site.baseurl }}/feed.xml">
+    <link rel="alternate" type="application/atom+xml" title="News feed" href="{{ site.baseurl }}/feed.xml">
 </head>
 
 <body>
