--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
     <div class="row-fluid">
         <div class="span12 footer navbar-inverse navbar-fixed-bottom">
           <p class="copyright">
-            WebSite &copy; {{ site.time | date: '%Y' }} PgBouncer Authors.
-            Based on <a href="https://github.com/scotte/jekyll-clean">jekyll-clean</a> theme.
+            Website &copy; {{ site.time | date: '%Y' }} PgBouncer Authors.
+            Design &copy; <a href="https://github.com/scotte/jekyll-clean">Scott Emmons</a>
           </p>
         </div>
     </div>
