提交中文pgbouncer手册

--- a/_includes/links-list.html
+++ b/_includes/links-list.html
@@ -1,8 +1,9 @@
-<h1>Documentation</h1>
+<h1>文档</h1>
 <ul>
+  <li><a href="{{ site.baseurl }}/features.html">Features</a></li>
   <li><a href="{{ site.baseurl }}/faq.html">FAQ</a></li>
-  <li><a href="{{ site.baseurl }}/config.html">Configuration</a></li>
-  <li><a href="{{ site.baseurl }}/usage.html">Usage</a></li>
-  <li><a href="{{ site.baseurl }}/install.html">Install</a></li>
+  <li><a href="{{ site.baseurl }}/config.html">配置</a></li>
+  <li><a href="{{ site.baseurl }}/usage.html">使用</a></li>
+  <li><a href="{{ site.baseurl }}/install.html">安装</a></li>
   <li><a href="{{ site.baseurl }}/changelog.html">Changelog</a></li>
 </ul>
