--- a/_layouts/toc.html
+++ b/_layouts/toc.html
@@ -3,9 +3,7 @@
 <div class="container container-left">
     <div class="row">
         <div class="col-md-3 hidden-xs">
-            <div class="sidebar well">
-              {% include links-list.html %}
-            </div>
+            {% include sidebar.html %}
             <div class="sidebar well">
                 <h1>Contents</h1>
                 <div id="toc"></div>
