--- a/css/theme.css
+++ b/css/theme.css
@@ -1,7 +1,7 @@
-/*body {
-    padding-top: 60px;
-    padding-bottom: 60px;
-}*/
+body {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
 
 .copyright {
     color: #ffffff;
