--- a/_includes/links-list.html
+++ b/_includes/links-list.html
@@ -1,6 +1,6 @@
 <h1>文档</h1>
 <ul>
-  <li><a href="{{ site.baseurl }}/features.html">Features</a></li>
+  <li><a href="{{ site.baseurl }}/features.html">特性</a></li>
   <li><a href="{{ site.baseurl }}/faq.html">FAQ</a></li>
   <li><a href="{{ site.baseurl }}/config.html">配置</a></li>
   <li><a href="{{ site.baseurl }}/usage.html">使用</a></li>
